# wriggle

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
test/: puzzle2.txt  puzzle3.txt  puzzle4.txt
wriggle/: Board.cpp  Board.hpp  CMakeLists.txt  Location.cpp  Location.hpp  Snake.cpp  Snake.hpp  Solver.cpp  Solver.hpp  wriggle.cpp  wriggle.hpp
